name:                xml-alchemy
version:             0.1.0.0
synopsis:            Haskell Library and Application to serialize/pickle XML documents
homepage:            http://github.com/m15k/hs-xml-alchemy
license:             MIT
license-file:        LICENSE
author:              Montez Fitzpatrick <montezf@gmail.com>
maintainer:          montezf@gmail.com
copyright:           (c) 2013 Montez Fitzpatrick
category:            Text
build-type:          Simple
cabal-version:       >=1.10
Stability:           Experimental

-- description:         

extra-source-files:  README.md

library
  default-language:    Haskell2010
  hs-source-dirs:      lib
  exposed-modules:     
    Internal.HaskellDocument,
    FileIO,
    Readers.XSD,
    Readers.DTD,
    Writers.HexpatPickle
  -- other-modules:       Paths_xml_alchemy
  -- other-extensions:    FlexibleInstances, BangPatterns, CPP, DeriveDataTypeable, GeneralizedNewtypeDeriving, DeriveGeneric, StandaloneDeriving, OverloadedStrings, RecordWildCards, ScopedTypeVariables, TemplateHaskell, IncoherentInstances, NamedFieldPuns, NoImplicitPrelude, OverlappingInstances, UndecidableInstances, PatternGuards, Rank2Types, DefaultSignatures, EmptyDataDecls, FunctionalDependencies, KindSignatures, TypeOperators, ViewPatterns, FlexibleContexts
  build-depends:       
    base >=4.6 && <4.7, 
    hashtables,
    hashable,
    io-streams
    
--  ghc-options:
--    -Wall -fno-warn-orphans

-- executable          xml2hs
--   if flag(just-library)
--     Buildable: False
--   else
--     Buildable: True
--   ghc-options: -Wall -threaded -O2
--   main-is:          Main.hs
--   hs-source-dirs:   app
--   build-depends:    
--       base

Source-Repository   head
  Type:             git
  Location:         https://github.com/m15k/hs-xml-alchemy